<resources>
    <string name="app_name">My Application</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="LogInTitle">LOG IN</string>
    <string name="PhoneText">CellPhone</string>
    <string name="PasswordText">Password</string>
    <string name="SignInButton">Sign In</string>
    <string name="NoAccountNotice">No Account?</string>
    <string name="SignUpButton">SIGN UP</string>
    <string name="OrNotice">Or</string>
    <string name="AsGuestButton">As Guest</string>
    <string name="title_activity_log_in_1st">LogIn_1st</string>
    <string name="title_activity_patient_log_in">patient_log_in</string>
    <string name="title_activity_guest_log_in">guest_log_in</string>
    <string name="title_activity_dentist_log_in">dentist_log_in</string>
    <string name="title_activity_dentist_list">dentistList</string>
    <string name="title_activity_communicate_with_server">CommunicateWithServer</string>
    <string name="title_activity_sign_up">Sign_up</string>
    <string name="title_activity_sign_up_fail">sign_up_fail</string>
    <string name="title_activity_log_in_fail">logInFail</string>
    <string name="title_activity_dwzm_page">DwzmPage</string>
    <string name="title_activity_pwzm_page">PwzmPage</string>
    <string name="title_activity_p_reserve">pReserve</string>
    <string name="title_activity_d_change_schedule">dChangeSchedule</string>
</resources>
